# clawler

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
clawler/: __init__.py  __main__.py  api.py  bookmarks.py  cache.py  cli.py  config.py  dedup.py  discover.py  engine.py  feeds_config.py  health.py  history.py  language.py  models.py  opml.py  podcast_config.py  podcast_feeds.yaml  profile.py  readtime.py  registry.py  sentiment.py  source_weights.yaml  stories.py  strategy.py  utils.py  weights.py
clawler/formatters/: __init__.py  atom.py  console.py  csv_out.py  html_out.py  json_out.py  jsonfeed.py  jsonl_out.py  markdown.py  rss_out.py
clawler/podcast/: __init__.py  ingest.py  summarize.py  transcribe.py
clawler/sources/: __init__.py  aljazeera.py  alltop.py  apnews.py  arstechnica.py  arxiv.py  axios.py  barstoolsports.py  base.py  bbc.py  bleacherreport.py  bluesky.py  changelog.py  cnbc.py  cnet.py  devto.py  dzone.py  echojs.py  economist.py  engadget.py  flipboard.py  forbes.py  fourzerofourmedia.py  freecodecamp.py  github_trending.py  googlenews.py  guardian.py  hackernews.py  hackernoon.py  hashnode.py  indiehackers.py  infoq.py  jamanetwork.py  lemmy.py  lobsters.py  marketwatch.py  mastodon.py  medium.py  medpagetoday.py  metafilter.py  (+42 more)
clawler/sources/podcasts/: __init__.py  apple.py  base.py  rss.py  spotify.py  youtube.py
docs/: advanced.md  configuration.md  filters.md  output-formats.md  podcasts.md  sources.md
tests/: conftest.py  test_404media_propublica.py  test_alltop.py  test_alltop_integration.py  test_api_github.py  test_api_registry.py  test_apnews.py  test_apnews_v10450.py  test_arstechnica.py  test_arstechnica_techcrunch_v10540.py  test_arxiv.py  test_arxiv_v1010.py  test_atlantic_cnet_v10560.py  test_atom.py  test_axios.py  test_axios_v10660.py  test_bbc.py  test_bbc_v10340.py  test_bluesky.py  test_bluesky_v1020.py  test_bookmarks.py  test_cache.py  test_cache_fields.py  test_changelog.py  test_cli.py  test_cnbc.py  test_cnbc_marketwatch.py  test_cnbc_v10700.py  test_cnet_propublica_infoq_v10830.py  test_config.py  test_dedup.py  test_dedup_fix.py  test_dedup_stats.py  test_devto.py  test_devto_quality.py  test_discover.py  test_dzone.py  test_echojs_v10600.py  test_economist.py  test_economist_v10720.py  (+144 more)
