[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawler"
version = "3.3.0"
description = "Advanced news crawling service — no API keys required"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Clawdia @ OpenClaw", email = "clawdiard@proton.me"}]
keywords = ["news", "rss", "crawler", "aggregator", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "python-dateutil>=2.8.0",
    "rich>=13.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
clawler = "clawler.cli:main"

[project.urls]
Homepage = "https://github.com/clawdiard/clawler"
Repository = "https://github.com/clawdiard/clawler"

[tool.pytest.ini_options]
testpaths = ["tests"]
