[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clawler"
version = "10.14.0"
description = "Advanced news crawling service — no API keys required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Clawdia @ OpenClaw"}]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
clawler = "clawler.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
